--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             </nav>
         </aside>
         <!-- Хватит сайдбара -->
+        <div id="page-overlay">
+
+        </div>
         <!-- Страница начинается -->
         <section id="page">
             <!-- Хеадер -->
@@ -432,7 +435,10 @@
                                                 </header>
                                             </a>
                                             <p>С 22 по 29 сентября 2015 года в университете проводился отборочный (внутривузовский) тур международной студенческой Интернет-олимпиады по дисциплинам: «Русский язык», «История России», «Философия», «Правоведение» и «Социология». На призыв «Проверь свой интеллект средствами Интернет-олимпиад» в этом году откликнулось 179 студентов ЮРГПУ (НПИ). Это неравнодушные к качеству своего образования молодые люди, заранее планирующие свои карьерные стратегии и желающие проверить свои интеллектуальные возможности.</p>
-                                            <footer class="article-footer"><a href="#" class="read-more">Читать далее...</a></footer>
+                                            <footer class="article-footer">
+                                                <a href="#" class="read-more">Читать далее...</a>
+                                                <div class="mobile-date">01.10.15</div>
+                                            </footer>
                                         </div>
                                     </article>
                                     <article>
@@ -446,7 +452,10 @@
                                                 </header>
                                             </a>
                                             <p>С 22 по 29 сентября 2015 года в университете проводился отборочный (внутривузовский) тур международной студенческой Интернет-олимпиады по дисциплинам: «Русский язык», «История России», «Философия», «Правоведение» и «Социология». На призыв «Проверь свой интеллект средствами Интернет-олимпиад» в этом году откликнулось 179 студентов ЮРГПУ (НПИ). Это неравнодушные к качеству своего образования молодые люди, заранее планирующие свои карьерные стратегии и желающие проверить свои интеллектуальные возможности.</p>
-                                            <footer class="article-footer"><a href="#" class="read-more">Читать далее...</a></footer>
+                                            <footer class="article-footer">
+                                                <a href="#" class="read-more">Читать далее...</a>
+                                                <div class="mobile-date">17.09.15</div>
+                                            </footer>
                                         </div>
                                     </article>
                                     <article>
@@ -458,7 +467,10 @@
                                                 <header class="article-header"><h3>Слёт активной молодёжи «Готов к труду и обороне»</h3></header>
                                             </a>
                                             <p>С 22 по 29 сентября 2015 года в университете проводился отборочный (внутривузовский) тур международной студенческой Интернет-олимпиады по дисциплинам: «Русский язык», «История России», «Философия», «Правоведение» и «Социология». На призыв «Проверь свой интеллект средствами Интернет-олимпиад» в этом году откликнулось 179 студентов ЮРГПУ (НПИ). Это неравнодушные к качеству своего образования молодые люди, заранее планирующие свои карьерные стратегии и желающие проверить свои интеллектуальные возможности.</p>
-                                            <footer class="article-footer"><a href="#" class="read-more">Читать далее...</a></footer>
+                                            <footer class="article-footer">
+                                                <a href="#" class="read-more">Читать далее...</a>
+                                                <div class="mobile-date">13.09.15</div>
+                                            </footer>
                                         </div>
                                     </article>
                                     <article class="more-news">
