Pre-release version

--- a/column-left.html
+++ b/column-left.html
@@ -13,9 +13,12 @@
     <script type="text/javascript" src="/js/vendor/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="/js/moduleman.js"></script>
     <script type="text/javascript" src="/js/header.js"></script>
+    <script type="text/javascript" src="/js/navigation.js"></script>
     <script type="text/javascript" src="/js/nav.js"></script>
     <script type="text/javascript" src="/js/swiper/swiper.min.js"></script>
+    <script type="text/javascript" src="/js/vendor/jquery.arbitrary-anchor.js"></script>
     <script type="text/javascript" src="/js/main-slider.js"></script>
+    <script type="text/javascript" src="/js/biw.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&language=ru"></script>
     <script type="text/javascript" src="/js/gmaps.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -231,7 +234,7 @@
                 <div class="gradient"></div>
                 <div class="impact">
                     <div class="container">
-                        <div id="header-main-logo"></div>
+                        <a href="/"><div id="header-main-logo"></div></a>
                         <h1>Первый ВУЗ юга России!</h1>
                         <h2>Основан в 1907 году</h2>
                         <p>«Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова»</p>
