Fix less and html paths

--- a/index.html
+++ b/index.html
@@ -528,28 +528,28 @@
                             <div class="row">
                                 <div class="col-sm-3">
                                     <a href="//pobeda.npi-tu.ru/" title="День Победы в НПИ" class="featured-link">
-                                        <div class="image" style="background-image: url('/images/banners/victoryday.png');">
+                                        <div class="image" style="background-image: url('images/banners/victoryday.png');">
                                         </div>
                                         <h5>День Победы в НПИ</h5>
                                     </a>
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="//wi.npi-tu.ru/" title="Военный институт" class="featured-link">
-                                        <div class="image" style="background-image: url('/images/banners/afrf.png');">
+                                        <div class="image" style="background-image: url('images/banners/afrf.png');">
                                         </div>
                                         <h5>Военный институт</h5>
                                     </a>
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="index.php?id=3347" title="Казачья сотня" class="featured-link">
-                                        <div class="image" style="background-image: url('/images/banners/donkazak.png');">
+                                        <div class="image" style="background-image: url('images/banners/donkazak.png');">
                                         </div>
                                         <h5>Казачья сотня</h5>
                                     </a>
                                 </div>
                                 <div class="col-sm-3">
                                     <a href="index.php?id=3544" title="Олимпиада школьников «Звезда»" class="featured-link">
-                                        <div class="image" style="background-image: url('/images/banners/star.png');">
+                                        <div class="image" style="background-image: url('images/banners/star.png');">
                                         </div>
                                         <h5>Олимпиада школьников «Звезда»</h5>
                                     </a>
